Lower build to Java 17; fix missing import and List.getFirst()